2009-02-03  Dirk Schulze  <krit@webkit.org>

Reviewed by Holger Hans Peter Freyther.

        Fixed getImageData and putImageData and respect pre-
        multiplied colors.

        Cairo's ImageBuffer::getImageData() does not handle alpha=0 case correctly
        https://bugs.webkit.org/show_bug.cgi?id=21575

        * platform/graphics/cairo/ImageBufferCairo.cpp:
        (WebCore::ImageBuffer::getImageData):
        (WebCore::ImageBuffer::putImageData):


Canonical link: https://commits.webkit.org/32725@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40542 268f45cc-cd09-0410-ab3c-d52691b4dbfc